--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+* {
+  font-family: montserrat;
+  color: white;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(7, 0, 65);
+  padding: 5%;
+}
+.navbar {
+  padding-bottom: 5%;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.459);
+}
+.links a {
+  font-size: 1.2em;
+
+  padding-right: 5%;
+}
+.content {
+  padding-top: 10%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.blog-preview {
+  padding: 1%;
+  margin: 2%;
+  border-bottom: 1px solid #fafafa48;
+  border-radius: 5px;
+}
+.blog-preview:hover {
+  box-shadow: 3px 4px 6px rgba(255, 255, 255, 0.61);
+}
+input {
+  color: black;
 }
