--- a/src/index.css
+++ b/src/index.css
@@ -129,6 +129,9 @@ form button {
   }
 }
 @media (min-width: 1024px) {
+  body {
+    padding: 5% 25% 5% 25%;
+  }
   h1 {
     font-size: 1.5em;
   }
@@ -164,7 +167,7 @@ form button {
     font-size: 1em;
   }
   form button {
-    width: 12%;
+    width: 20%;
     font-size: 1em;
   }
   form select option {
