--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,18 @@ h1 {
 .blog-preview:hover {
   box-shadow: 3px 4px 6px rgba(255, 255, 255, 0.61);
 }
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Montserrat', sans-serif;
+  padding: 1%;
+  background-color: rgb(7, 0, 65);
+}
+.footer a {
+  text-decoration: none;
+  font-weight: 100;
+}
 
 /* blog details */
 .blog-body {
@@ -130,7 +142,7 @@ form button {
 }
 @media (min-width: 1024px) {
   body {
-    padding: 5% 25% 5% 25%;
+    padding: 5% 25% 2% 25%;
   }
   h1 {
     font-size: 1.5em;
